0.5.8
 - fix: introduce LocalTaskResourcesNotFoundError in upload.task
   which results in a custom DCORAidQueueWarning in upload.queue
   in case a dataset resource is not available at the moment;
   previously, this scenario resulted in a FileNotFoundError
 - fix: when loading tasks recursively from a directory, only ask
   once for the circle (if there are multiple available to the user)
0.5.7
 - tests: fix test logic for new anonymous test (#15)
0.5.6
 - fix: UnboundLocalError "progress" referenced before assignment,
   because "wait-disk" status was not handled
 - fix: UploadQueue could not handle jobs in PersistentUploadJobList that
   had been deleted on the server
 - fix: Initial startup and anonymous mode did not work, because
   there was an attempt to access the API (#15)
0.5.5
 - fix: prevent disk filling up with cached compressed resources if
   new upload jobs are added with dataset IDs that are sorted above
   existing cache directories
0.5.4
 - fix: possibly fix white UI window on Windows 7
 - fix: start persistent upload jobs always in same order
0.5.3
 - enh: re-use compressed resources from now on
 - enh: check disk usage before compressing data for upload
 - enh: allow to remove zombie cache folders via Maintenance tab
 - ref: upload cache location is now handled with keyword arguments;
   the default is a temporary directory; the GUI uses QStandardPaths
 - ref: migrate favicon location to AppDataLocation
 - ref: migrate upload compress cache to CacheLocation
   (automatically move cached data from old appdirs location)
 - build: base Windows release on Python 3.8
 - setup: require Python 3.8
0.5.2
 - enh: write the obtained dataset identifier to task files that
   were successfully imported
 - enh: allow the user to select a circle when uploading tasks that
   don't have any circle defined
 - fix: interface was not updated (e.g. list of uploads), because
   of wrong default parameter
 - fix: avoid upload jobs with invalid dataset IDs
0.5.1